--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -35,7 +35,7 @@
         android:fontFamily="monospace"
         />
     <Button
-        android:id="@+id/AboutUS"
+        android:id="@+id/aboutus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/aboutus"
