--- a/app/src/main/res/layout/activity_scoreboard.xml
+++ b/app/src/main/res/layout/activity_scoreboard.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="my.company.dwarfjump.scoreboard">
+    tools:context="my.company.dwarfjump.scoreboard"
+    >
 
     <TextView
         android:layout_width="wrap_content"
