--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -5,13 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="my.company.dwarfjump.AboutUs"
-    android:background="@drawable/mrdwarf"
+    android:background="@drawable/drunkendwarf_withbackground"
     >
     <TextView
         android:text="@string/madeby"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
+        android:textColor="@android:color/black"
         />
 
 
