--- a/app/src/main/res/layout/activity_drinking_rules.xml
+++ b/app/src/main/res/layout/activity_drinking_rules.xml
@@ -16,6 +16,11 @@
         android:textColor="@android:color/black"
         android:textSize="30dp"
         android:textStyle="bold"
+
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="15dp"
+
         />
 
     <TextView
@@ -23,8 +28,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/drinkingrules"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="25dp"
         android:text="1. Take a shot before starting the Game"
         />
 
@@ -33,8 +39,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/rule1"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="15dp"
         android:text="2. Select your Player!"
         />
 
@@ -43,8 +50,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/rule2"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="15dp"
         android:text="3. Press the start button, the random timer will Start"
 
         />
@@ -54,8 +62,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/rule3"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="15dp"
         android:text="4. The first Player who presses the button will lose \n (Yeah, you have to drink!)"
         />
 
@@ -64,8 +73,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/rule4"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="15dp"
         android:text="5. When the dwarf stops drinking and a Player hasn't pressed yet, the Player has to drink with the Dwarf "
         />
 
@@ -74,9 +84,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/rule5"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="10dp"
-        android:text="6. The looser has to drink 1 Shot, 3 Nips of a nice Longdrink or 0,3l best Dwarfish Beer! \n\n"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="15dp"
+        android:text="6. The looser has to drink 1 Shot, 3 Nips of a nice Longdrink or 0,3l best Dwarfish Beer! \n"
         />
 
     <TextView
@@ -84,11 +95,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/rule6"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="15dp"
         android:textStyle="bold"
         android:text="Most Important Rule: \n\n The Dwarf is your best friend, so honor him and \n take a shot!"
         />
 
-    
-</>
+
+</RelativeLayout>
