--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/drunkendwarfdifferent"
     tools:context="my.company.dwarfjump.MainActivity">
 
-    <FrameLayout
-        android:layout_weight="1"
-        android:id="@+id/game"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"></FrameLayout>
 
     <View
-        android:id="@+id/touchpad"
-        android:background="@android:color/darker_gray"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"></View>
+        android:id="@+id/touchpad1"
+        android:background="@android:color/holo_green_light"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_alignParentTop="true"></View>
 
-</LinearLayout>
+    <TextView
+        android:layout_width="120dp"
+        android:layout_height="40dp"
+        android:text="Player 1"
+        android:textSize="30dp"
+        android:textColor="@android:color/holo_green_light"
+        android:layout_below="@+id/touchpad1"/>
+
+    <View
+        android:id="@+id/touchpad2"
+        android:background="@android:color/holo_blue_bright"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"></View>
+
+    <TextView
+        android:layout_width="120dp"
+        android:layout_height="40dp"
+        android:text="Player 2"
+        android:textSize="30dp"
+        android:textColor="@android:color/holo_blue_bright"
+        android:layout_below="@+id/touchpad2"
+        android:layout_alignParentRight="true"/>
+
+    <View
+        android:id="@+id/touchpad3"
+        android:background="@android:color/holo_orange_light"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_alignParentBottom="true"></View>
+
+    <TextView
+        android:layout_width="120dp"
+        android:layout_height="40dp"
+        android:text="Player 3"
+        android:textSize="30dp"
+        android:textColor="@android:color/holo_orange_light"
+        android:layout_above="@+id/touchpad3"/>
+
+    <View
+        android:id="@+id/touchpad4"
+        android:background="@android:color/holo_purple"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"></View>
+
+    <TextView
+        android:layout_width="120dp"
+        android:layout_height="40dp"
+        android:text="Player 4"
+        android:textSize="30dp"
+        android:textColor="@android:color/holo_purple"
+        android:layout_above="@+id/touchpad4"
+        android:layout_alignParentRight="true"/>
+
+    <TextView
+        android:id="@+id/countdown"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:textSize="70dp"
+        android:textColor="@android:color/black"/>
+
+    <Button
+        android:id="@+id/reset"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/countdown"
+        android:layout_centerHorizontal="true"
+        android:text="Reset"
+        android:visibility="invisible"/>
+
+</RelativeLayout>
